@@ -1,5 +1,8 @@
 2003-05-30  Bradley Bell  <btb@icculus.org>
 
+	* main/gameseq.c, main/menu.c, main/newmenu.c: improved demo/plr
+	loading
+
 	* .cvsignore, 2d/.cvsignore, 3d/.cvsignore, arch/.cvsignore,
 	arch/dos/.cvsignore, arch/ggi/.cvsignore, arch/linux/.cvsignore,
 	arch/ogl/.cvsignore, arch/sdl/.cvsignore, arch/svgalib/.cvsignore,
